Fix: Client - Update extraWrapper child to have equal width on smaller resolution

--- a/client/src/components/LoginForm/loginForm.module.css
+++ b/client/src/components/LoginForm/loginForm.module.css
@@ -62,4 +62,9 @@
   .nameWrapper {
     flex-direction: column;
   }
+
+  .extraWrapper > * {
+    flex-basis: 0;
+    flex-grow: 1;
+  }
 }
